--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li>InFeRNo</li>
         </ul>
 
-        <a href="" id="myButton">Click Me</a>
+        <a id="myButton">Click Me</a>
 
       </div>
 
