--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/favicon3.png">
 
 </head>
@@ -85,7 +85,7 @@
   </header>
 
 
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
   <script src="particles.js"></script>
   <script src="app.js"></script>
   <script src="https://cdnjs.cloudflare.com\ajax\libs\jquery\3.4.1\jquery.min.js"></script>
