--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gab Cousins</title>
+  <title>GABCOUSINS</title>
 
-  <meta property="og:title" content="Gab Cousins">
-  <meta name="description" content="A dumb boy🤯">
-  <meta property="og:description" content="A dumb boy🤯">
-  <meta property="m" content="https://img1.wsimg.com/isteam/ip/1e6e8d2a-b1f4-47c2-b2d0-3efefe66f2c7/blob.png">
-  <meta name="twitter:card" content="summary">
-  <meta name="theme-color" content="#3673FC">
-  <link href="" rel="canonical">
+<meta property="og:site_name" content="GABCOUSINS">
+<meta property="og:title" content="GABCOUSINS">
+<meta property="og:description" content="Explore the playful and creative world of Gab Cousins, a self-proclaimed 'useless' individual with a passion for design, coding, and fun. Connect with Gab and the SHATTERDOME team, and sit back and enjoy talking with us ">
+<meta property="og:type" content="website">
+<meta property="og:image" content="images/favicon3.png">
+<meta property="og:locale" content="en_IN">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="GABCOUSINS">
+<meta name="twitter:description" content="GAB HERE">
+<meta name="twitter:image" content="images/favicon3.png">
+<meta name="twitter:image:alt" content="GAB">
+<meta name="theme-color" content="#b7141e">
+<link href="https://gabcousins.github.io/GabCousins/" rel="canonical">
 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="images/favicon3.png">
 
 </head>
@@ -85,7 +91,7 @@
   </header>
 
 
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
   <script src="particles.js"></script>
   <script src="app.js"></script>
   <script src="https://cdnjs.cloudflare.com\ajax\libs\jquery\3.4.1\jquery.min.js"></script>
