--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <meta property="og:title" content="GABCOUSINS">
 <meta property="og:description" content="Explore the playful and creative world of Gab Cousins, a self-proclaimed 'useless' individual with a passion for design, coding, and fun. Connect with Gab and the SHATTERDOME team, and sit back and enjoy talking with us ">
 <meta property="og:type" content="website">
-<meta property="og:image" content="images/favicon3.png">
+<meta property="og:image" content="https://media.discordapp.net/attachments/1062430013175119914/1145742688965120050/favicon3.png?width=468&height=468">
 <meta property="og:locale" content="en_IN">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="GABCOUSINS">
 <meta name="twitter:description" content="GAB HERE">
-<meta name="twitter:image" content="images/favicon3.png">
+<meta name="twitter:image" content="https://media.discordapp.net/attachments/1062430013175119914/1145742688965120050/favicon3.png?width=468&height=468g">
 <meta name="twitter:image:alt" content="GAB">
 <meta name="theme-color" content="#b7141e">
 <link href="https://gabcousins.github.io/gabCousins/" rel="canonical">
