--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GABCOUSINS</title>
-<link rel="icon" type="image/png" href="//images/logo.jpg" style="width: 100%">
+<link rel="icon" type="image/png" href="https://i.imgur.com/sPYXzgJ.jpg" style="width: 100%">
 <meta property="og:site_name" content="GABCOUSINS">
 <meta property="og:title" content="GABCOUSINS">
 <meta property="og:description" content="Explore the playful and creative world of Gab Cousins, a self-proclaimed 'useless' individual with a passion for design, coding, and fun. Connect with Gab and the SHATTERDOME team, and sit back and enjoy talking with us ">
 <meta property="og:type" content="website">
-<meta property="og:image" content="//images/logo.jpg">
+<meta property="og:image" content="https://i.imgur.com/sPYXzgJ.jpg">
 <meta property="og:locale" content="en_IN">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="GABCOUSINS">
 <meta name="twitter:description" content="GAB HERE">
-<meta name="twitter:image" content="//images/logo.jpg">
+<meta name="twitter:image" content="https://i.imgur.com/sPYXzgJ.jpg">
 <meta name="twitter:image:alt" content="GAB">
 <meta name="theme-color" content="#b7141e">
 <link href="https://gabcousins.github.io/gabCousins/" rel="canonical">
