--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <link rel="stylesheet" href="https://badge.coolcodersj.repl.co/style.css">
 <a class="badge" href="https://repl.it/@USER" target="_blank" >
-<img src="" alt="replit" />MADE BY GAB</a>
+<img src="images/favicon3.png" class="madegab"  alt="replit"/>MADE BY GAB</a>
   </header>
 
 
