--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <p> 2023 Gab cousins. All rights reserved.</p>
+        <p> 2024 gabCousins. All rights reserved.</p>
        
       </div>
     </div>
