--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
         <a href="https://www.instagram.com/gabcousins/" target="_blank" id="instagram"><i class="fab fa-instagram "></i></a>
       </div>
     </div>
-
+<link rel="stylesheet" href="https://badge.coolcodersj.repl.co/style.css">
+<a class="badge" href="https://repl.it/@USER" target="_blank" >
+<img src="" alt="replit" />MADE BY GAB</a>
   </header>
 
 
