--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
 <link rel="stylesheet" href="https://badge.coolcodersj.repl.co/style.css">
 <a class="badge" href="https://repl.it/@USER" target="_blank" >
-<img src="" alt="replit" />MADE BY GAB</a>
+<img src="images/favicon2.png" alt="replit" />MADE BY GAB</a>
   </header>
 
 
