--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
       </div>
     </div>
 <link rel="stylesheet" href="https://badge.coolcodersj.repl.co/style.css">
-<a class="badge" href="https://repl.it/@USER" target="_blank" >
-<img src="images/favicon2.png" alt="replit" />MADE BY GAB</a>
+<a class="badge" href="https://repl.it/@USER" target="_blank" >MADE BY GAB</a>
   </header>
 
 
