--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
            
-           <div class="card">
+           <div class="card" onclick="window.open('https://discord.gg/zioncity', '_blank')">
            
            <div class="image">
               <img class="image1" src="images/gta5rp.jpg">
@@ -89,6 +89,10 @@
            GTA 5 RP [Fivem]</h1>
            </div>
            <div class="des">
+            <p> I play On ZionCity RP 
+              Its A RP Server From Malayalam Community<br>
+             <p class="zion"> "Pls Click On The Card To Join ZIONCITY RP Discord Server And Pls Join In The RP Server."</p>
+            </p>
 
            </div>
            </div>
@@ -105,6 +109,9 @@
           Euro Truck Simulator </h1>
            </div>
            <div class="des">
+            <p> I Play ETS2 With My Friends also I Will Play SinglePlayer
+            </p>
+
 
            </div>
            </div>
@@ -121,6 +128,8 @@
            Minecraft </h1>
            </div>
            <div class="des">
+            <p> I Play On Most Popular Minecraft Server "HYPIXEL" I Play With My Friends And Have A Small SMP On "HYPIXEL"
+            </p>
 
            </div>
            </div>
@@ -137,6 +146,9 @@
           Chained Together</h1>
            </div>
            <div class="des">
+            <p> This Game Is A Newly Popular Game And I Play With Friends And Also SinglePlayer
+            </p>
+
 
            </div>
            </div>
