--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
            
-           <div class="card" onclick="window.open('https://discord.gg/zioncity', '_blank')">
+           <div class="card" onclick="window.open('https://discord.gg/zion-city-kerala-775836599157522432', '_blank')">
            
            <div class="image">
               <img class="image1" src="images/gta5rp.jpg">
